version/0.1/_sources/examples/ansys-math_vs_scipy.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/ansys-math_vs_scipy.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_ansys-math_vs_scipy.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_ansys-math_vs_scipy.py:


.. _ref_ansys_math_vs_scipy:

Compute Eigenvalues using PyAnsys Math and SciPy
------------------------------------------------

This example shows how to perform these tasks:

- Extract the stiffness and mass matrices from an MAPDL model.
- Use PyAnsys Math to compute the first eigenvalues.
- Get these matrices using SciPy to obtain the same
  solutions using Python resources.
- See if PyAnsys Math is more accurate and faster than SciPy.

.. GENERATED FROM PYTHON SOURCE LINES 17-20

Perform required imports and start PyAnsys Math
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports.

.. GENERATED FROM PYTHON SOURCE LINES 20-35

.. code-block:: default


    import math
    import time

    from ansys.mapdl.core import examples
    import matplotlib.pylab as plt
    import numpy as np
    import scipy
    from scipy.sparse.linalg import eigsh

    import ansys.math.core.math as pymath

    # Start PyAnsys Math as a service.
    mm = pymath.AnsMath()








.. GENERATED FROM PYTHON SOURCE LINES 36-39

Load the input file
~~~~~~~~~~~~~~~~~~~
Load the input file using MAPDL.

.. GENERATED FROM PYTHON SOURCE LINES 39-43

.. code-block:: default


    print(mm._mapdl.input(examples.examples.wing_model))






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


     /INPUT FILE= wing.dat  LINE=       0

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     15:27:06  AUG 10, 2023 CP=      0.469

                                                                               



              ***** MAPDL ANALYSIS DEFINITION (PREP7) *****

     *** WARNING ***                         CP =       0.470   TIME= 15:27:06
     Deactivation of element shape checking is not recommended.              

     *** WARNING ***                         CP =       0.505   TIME= 15:27:06
     The mesh of area 1 contains PLANE42 triangles, which are much too stiff 
     in bending.  Use quadratic (6- or 8-node) elements if possible.         

     *** WARNING ***                         CP =       0.514   TIME= 15:27:06
     CLEAR, SELECT, and MESH boundary condition commands are not possible    
     after MODMSH.                                                           


     ***** ROUTINE COMPLETED *****  CP =         0.521







.. GENERATED FROM PYTHON SOURCE LINES 44-47

Plot and mesh
~~~~~~~~~~~~~
Plot and mesh using the ``eplot`` method.

.. GENERATED FROM PYTHON SOURCE LINES 47-51

.. code-block:: default


    mm._mapdl.eplot()





.. image-sg:: /examples/images/sphx_glr_ansys-math_vs_scipy_001.png
   :alt: ansys math vs scipy
   :srcset: /examples/images/sphx_glr_ansys-math_vs_scipy_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 52-56

Set up modal analysis
~~~~~~~~~~~~~~~~~~~~~
Set up a modal analysis and form the :math:`K` and :math:`M` matrices.
MAPDL stores these matrices in a ``.FULL`` file.

.. GENERATED FROM PYTHON SOURCE LINES 56-66

.. code-block:: default


    print(mm._mapdl.slashsolu())
    print(mm._mapdl.antype(antype="MODAL"))
    print(mm._mapdl.modopt(method="LANB", nmode="10", freqb="1."))
    print(mm._mapdl.wrfull(ldstep="1"))

    # store the output of the solve command
    output = mm._mapdl.solve()






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    *****  MAPDL SOLUTION ROUTINE  *****
    PERFORM A MODAL ANALYSIS
      THIS WILL BE A NEW ANALYSIS
    USE SYM. BLOCK LANCZOS MODE EXTRACTION METHOD
      EXTRACT    10 MODES
      SHIFT POINT FOR EIGENVALUE CALCULATION=  1.0000    
      NORMALIZE THE MODE SHAPES TO THE MASS MATRIX
    STOP SOLUTION AFTER FULL FILE HAS BEEN WRITTEN
       LOADSTEP =    1 SUBSTEP =    1 EQ. ITER =    1




.. GENERATED FROM PYTHON SOURCE LINES 67-70

Read sparse matrices
~~~~~~~~~~~~~~~~~~~~
Read the sparse matrices using PyAnsys Math.

.. GENERATED FROM PYTHON SOURCE LINES 70-77

.. code-block:: default


    mm._mapdl.finish()
    mm.free()
    k = mm.stiff(fname="file.full")
    M = mm.mass(fname="file.full")









.. GENERATED FROM PYTHON SOURCE LINES 78-82

Solve eigenproblem
~~~~~~~~~~~~~~~~~~
Solve the eigenproblme using PyAnsys Math.


.. GENERATED FROM PYTHON SOURCE LINES 82-91

.. code-block:: default

    nev = 10
    A = mm.mat(k.nrow, nev)

    t1 = time.time()
    ev = mm.eigs(nev, k, M, phi=A, fmin=1.0)
    t2 = time.time()
    pymath_elapsed_time = t2 - t1
    print("\nElapsed time to solve this problem : ", pymath_elapsed_time)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Elapsed time to solve this problem :  0.6572909355163574




.. GENERATED FROM PYTHON SOURCE LINES 92-98

Print eigenfrequencies and accuracy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Print the eigenfrequencies and the accuracy.

Accuracy : :math:`\frac{||(K-\lambda.M).\phi||_2}{||K.\phi||_2}`


.. GENERATED FROM PYTHON SOURCE LINES 98-118

.. code-block:: default

    pymath_acc = np.empty(nev)

    for i in range(nev):
        f = ev[i]  # Eigenfrequency (Hz)
        omega = 2 * np.pi * f  # omega = 2.pi.Frequency
        lam = omega**2  # lambda = omega^2

        phi = A[i]  # i-th eigenshape
        kphi = k.dot(phi)  # K.Phi
        mphi = M.dot(phi)  # M.Phi

        kphi_nrm = kphi.norm()  # Normalization scalar value

        mphi *= lam  # (K-\lambda.M).Phi
        kphi -= mphi

        pymath_acc[i] = kphi.norm() / kphi_nrm  # compute the residual
        print(f"[{i}] : Freq = {f:8.2f} Hz\t Residual = {pymath_acc[i]:.5}")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0] : Freq =   352.39 Hz         Residual = 1.7923e-08
    [1] : Freq =   385.16 Hz         Residual = 5.5633e-09
    [2] : Freq =   656.78 Hz         Residual = 1.0513e-08
    [3] : Freq =   764.72 Hz         Residual = 6.3881e-09
    [4] : Freq =   825.33 Hz         Residual = 7.6773e-09
    [5] : Freq =  1039.21 Hz         Residual = 7.1577e-09
    [6] : Freq =  1143.66 Hz         Residual = 1.4146e-08
    [7] : Freq =  1258.00 Hz         Residual = 5.0859e-08
    [8] : Freq =  1334.23 Hz         Residual = 5.3598e-08
    [9] : Freq =  1352.06 Hz         Residual = 3.8644e-08




.. GENERATED FROM PYTHON SOURCE LINES 119-123

Use SciPy to solve the same eigenproblem
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get the MAPDL sparse matrices into Python memory as SciPy
matrices.

.. GENERATED FROM PYTHON SOURCE LINES 123-138

.. code-block:: default


    pk = k.asarray()
    pm = M.asarray()

    # get_ipython().run_line_magic('matplotlib', 'inline')

    fig, (ax1, ax2) = plt.subplots(1, 2)
    fig.suptitle("K and M Matrix profiles")
    ax1.spy(pk, markersize=0.01)
    ax1.set_title("K Matrix")
    ax2.spy(pm, markersize=0.01)
    ax2.set_title("M Matrix")
    plt.show(block=True)





.. image-sg:: /examples/images/sphx_glr_ansys-math_vs_scipy_002.png
   :alt: K and M Matrix profiles, K Matrix, M Matrix
   :srcset: /examples/images/sphx_glr_ansys-math_vs_scipy_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 139-144

Make the sparse matrices for SciPy unsymmetric because symmetric matrices
in SciPy are memory inefficient.

:math:`K = K + K^T - diag(K)`


.. GENERATED FROM PYTHON SOURCE LINES 144-150

.. code-block:: default

    pkd = scipy.sparse.diags(pk.diagonal())
    pK = pk + pk.transpose() - pkd
    pmd = scipy.sparse.diags(pm.diagonal())
    pm = pm + pm.transpose() - pmd









.. GENERATED FROM PYTHON SOURCE LINES 151-153

Plot the matrices.


.. GENERATED FROM PYTHON SOURCE LINES 153-162

.. code-block:: default

    fig, (ax1, ax2) = plt.subplots(1, 2)
    fig.suptitle("K and M Matrix profiles")
    ax1.spy(pk, markersize=0.01)
    ax1.set_title("K Matrix")
    ax2.spy(pm, markersize=0.01)
    ax2.set_title("M Matrix")
    plt.show(block=True)





.. image-sg:: /examples/images/sphx_glr_ansys-math_vs_scipy_003.png
   :alt: K and M Matrix profiles, K Matrix, M Matrix
   :srcset: /examples/images/sphx_glr_ansys-math_vs_scipy_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 163-165

Solve the eigenproblem.


.. GENERATED FROM PYTHON SOURCE LINES 165-172

.. code-block:: default

    t3 = time.time()
    vals, vecs = eigsh(A=pK, M=pm, k=10, sigma=1, which="LA")
    t4 = time.time()
    scipy_elapsed_time = t4 - t3
    print("\nElapsed time to solve this problem : ", scipy_elapsed_time)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Elapsed time to solve this problem :  3.026555299758911




.. GENERATED FROM PYTHON SOURCE LINES 173-176

Convert lambda values to frequency values:
:math:`freq = \frac{\sqrt(\lambda)}{2.\pi}`


.. GENERATED FROM PYTHON SOURCE LINES 176-179

.. code-block:: default

    freqs = np.sqrt(vals) / (2 * math.pi)









.. GENERATED FROM PYTHON SOURCE LINES 180-184

Compute the residual error for SciPy.

:math:`Err=\frac{||(K-\lambda.M).\phi||_2}{||K.\phi||_2}`


.. GENERATED FROM PYTHON SOURCE LINES 184-202

.. code-block:: default

    scipy_acc = np.zeros(nev)

    for i in range(nev):
        lam = vals[i]  # i-th eigenvalue
        phi = vecs.T[i]  # i-th eigenshape

        kphi = pk * phi.T  # K.Phi
        mphi = pm * phi.T  # M.Phi

        kphi_nrm = np.linalg.norm(kphi, 2)  # Normalization scalar value

        mphi *= lam  # (K-\lambda.M).Phi
        kphi -= mphi

        scipy_acc[i] = 1 - np.linalg.norm(kphi, 2) / kphi_nrm  # compute the residual
        print(f"[{i}] : Freq = {freqs[i]:8.2f} Hz\t Residual = {scipy_acc[i]:.5}")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0] : Freq =   352.39 Hz         Residual = 8.0098e-05
    [1] : Freq =   385.16 Hz         Residual = 0.00010369
    [2] : Freq =   656.78 Hz         Residual = 0.00024262
    [3] : Freq =   764.72 Hz         Residual = 0.00016258
    [4] : Freq =   825.33 Hz         Residual = 0.00039002
    [5] : Freq =  1039.21 Hz         Residual = 0.00057628
    [6] : Freq =  1143.66 Hz         Residual = 0.0025916
    [7] : Freq =  1258.00 Hz         Residual = 0.00033872
    [8] : Freq =  1334.22 Hz         Residual = 0.00046633
    [9] : Freq =  1352.06 Hz         Residual = 0.0011262




.. GENERATED FROM PYTHON SOURCE LINES 203-206

See if PyAnsys Math is more accurate than SciPy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot residual error to see if PyAnsys Math is more accurate than SciPy.

.. GENERATED FROM PYTHON SOURCE LINES 206-219

.. code-block:: default


    fig = plt.figure(figsize=(12, 10))
    ax = plt.axes()
    x = np.linspace(1, 10, 10)
    plt.title("Residual Error")
    plt.yscale("log")
    plt.xlabel("Mode")
    plt.ylabel("% Error")
    ax.bar(x, scipy_acc, label="SciPy Results")
    ax.bar(x, pymath_acc, label="PyAnsys Math Results")
    plt.legend(loc="lower right")
    plt.show()




.. image-sg:: /examples/images/sphx_glr_ansys-math_vs_scipy_004.png
   :alt: Residual Error
   :srcset: /examples/images/sphx_glr_ansys-math_vs_scipy_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 220-223

See if PyAnsys Math is faster than SciPy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot elapsed time to see if PyAnsys Math is more accurate than SciPy.

.. GENERATED FROM PYTHON SOURCE LINES 223-227

.. code-block:: default


    ratio = scipy_elapsed_time / pymath_elapsed_time
    print(f"PyAnsys Math is {ratio:.3} times faster.")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    PyAnsys Math is 4.6 times faster.




.. GENERATED FROM PYTHON SOURCE LINES 228-231

Stop PyAnsys Math
~~~~~~~~~~~~~~~~~
Stop PyAnsys Math.

.. GENERATED FROM PYTHON SOURCE LINES 231-233

.. code-block:: default


    mm._mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  8.773 seconds)


.. _sphx_glr_download_examples_ansys-math_vs_scipy.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: ansys-math_vs_scipy.py <ansys-math_vs_scipy.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: ansys-math_vs_scipy.ipynb <ansys-math_vs_scipy.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
